# ai-fip

./: README.md
docs/: README.md  torque_estimation.md
fip-simulation-js/: README.md  package.json  pnpm-lock.yaml  webpack.config.js
fip-simulation-js/src/: geometry.ts  index.html  index.ts  ode.ts  plotting.ts
fip-simulation-js/src/css/: styles.css
fip-simulation-js/src/model/: fip_solver.onnx
firmware/ai-fip-dev-kit-c-stepper/: platformio.ini
firmware/ai-fip-dev-kit-c-stepper/include/: FixedRateExecutor.h  MPU.h  MathUtils.h
firmware/ai-fip-dev-kit-c-stepper/src/: FixedRateExecutor.cpp  MPU.cpp  main.cpp  pinout.h
firmware/ai-fip-dev-kit-c-stepper/src/stepper/: stepper.cpp  stepper.h
gymnasium-fip-env/: .gitignore  README.md  pyproject.toml
gymnasium-fip-env/fip_env/: __init__.py  rl.py  sandbox.py
gymnasium-fip-env/fip_env/agents/: __init__.py  ball_catcher.py  cart_pole_sb3.py  cartpole.py  fip_solver.py
gymnasium-fip-env/fip_env/commons/: graphics.py  physics.py
gymnasium-fip-env/fip_env/envs/: __init__.py  ball_catcher.py  flywheel_inverted_pendulum.py
gymnasium-fip-env/fip_env/playground/: __init__.py  binary_converter.py
gymnasium-fip-env/fip_env/sandbox/: pytorch_to_onnx.py
gymnasium-fip-env/fip_env/tools/: export_model_to_onnx.py
gymnasium-fip-env/fip_env/wrappers/: __init__.py
mpu-renderer/: index.html  package.json  pnpm-lock.yaml
mpu-renderer/src/: index.ts
simulation/regulators/: pyproject.toml
simulation/regulators/app/: main.py
simulation/regulators/app/ode/: __init__.py  solver.py
