[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fip_env"]

[project]
name = "fip_env"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "gymnasium",
  "stable-baselines3>=2.4.0",
  "torch>=2.5.1",
  "pygame>=2.1.3",
  "pre-commit",
  "onnx (>=1.17.0,<2.0.0)",
  "onnxruntime (>=1.20.1,<2.0.0)",
  "scikit-learn (>=1.6.1,<2.0.0)",
]
