[tool.poetry]
name = "regulators"
version = "0.1.0"
description = ""
authors = ["Sergey Royz <zjor.se@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
scipy = "^1.16.2"

[tool.poetry.scripts]
app = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
